# itmoscript

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  f
examples/: fibonacci.is  fizzbuzz.is  interp.is  maximum.is  overview.is  slices.is  test.is  test2.is  test3.is
lib/: AST.h  BNF.md  Builtins.cpp  Builtins.h  CMakeLists.txt  Environment.cpp  Environment.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  TokenType.h  Value.cpp  Value.h
tests/: CMakeLists.txt  _test.cpp  buildin_function.cpp  function_test.cpp  illegal_ops_test.cpp  interpretator.cpp  lexer_test.cpp  loop_and_branch_test.cpp  op_priority_test.cpp  parser_test.cpp  types_test.cpp
